<resources>
    <string name="app_name">ConverterCurrency</string>

    <string name="cost">Цена:</string>
    <string name="cost_placeholder">Введите цену...</string>
    <string name="current_cost">0₽</string>


    <string name="euro_sign">€</string>
    <string name="dollar_sign">$</string>
    <string name="pound_sign">£</string>
    <string name="rouble_sign">₽</string>

    <string name="ok_button">Ок</string>


</resources>
